# CMake_ExternalProject_Sample

./: CMakeLists.txt  LICENSE  README.md  main.cpp
3rdlibrary/: CMakeLists.txt
cmake/: FindTBB.cmake
